# terminator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  setup_windows.ps1  swagger.html
.cursor/rules/: mcp-debugging-testing.mdc  mediar-terminator-overview.mdc  pr-preparation-guide.mdc  terminator-development-guide.mdc  terminator-mcp-development.mdc  ui-automation-workflows.mdc
.github/: pull_request_template.md
.github/workflows/: build-release.yml  ci-wheels.yml  ci.yml  publish-npm.yml
bindings/node/: Cargo.toml  index.d.ts  index.js  node_example.js  package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/src/: lib.rs
bindings/nodejs/: Cargo.toml  README.md  index.d.ts  index.js  node_example.js  package-lock.json  package.json  sync-version.js  test-tree.js  wrapper.d.ts  wrapper.js
bindings/nodejs/npm/darwin-arm64/: README.md  package.json
bindings/nodejs/npm/darwin-x64/: README.md  package.json
bindings/nodejs/npm/linux-x64-gnu/: README.md  package.json
bindings/nodejs/npm/win32-x64-msvc/: README.md  package.json
bindings/nodejs/src/: desktop.rs  element.rs  exceptions.rs  lib.rs  locator.rs  types.rs
bindings/python/: Cargo.toml  pyproject.toml  python_pyo3_example.py  terminator-py.pyi  terminator.pyi  test_tree.py
bindings/python/src/: desktop.rs  element.rs  exceptions.rs  lib.rs  locator.rs  python.rs  types.rs
examples/: client_example.py  client_example.ts  close_example.rs  element_screenshot.py  gmail_automation.py  gnome-calculator.py  mspaint.py  notepad.py  package-lock.json  package.json  server.openapi.json  server.rs  simple.rs  snipping_tool.py  vlc_auto_player.py  wh.rs  win_automation.rs  win_calculator.py  win_calculator.ts  windows_pdf_to_legacy.rs
examples/ai-explorer/: tsconfig.json
examples/ai-explorer/src/: index.ts
examples/button/: Cargo.toml
examples/button/src/: main.rs
examples/excel-copilot/: README.md  package-lock.json  package.json
examples/excel-copilot/src/: App.css  App.tsx
examples/excel-copilot/src-tauri/: Cargo.toml  tauri.conf.json
examples/excel-copilot/src-tauri/capabilities/: default.json
examples/excel-copilot/src-tauri/src/: commands.rs  excel.rs  excel_interaction.rs  gemini.rs  lib.rs  locale_utils.rs  main.rs  openai.rs
examples/hello-world/: package-lock.json
examples/hello-world/src/app/: page.tsx
examples/hello-world/src/app/api/process-pdf/: route.ts
examples/hello-world/src/app/api/trigger-whatsapp-export/: route.ts
examples/hello-world/src/app/workflow/[slug]/: page.tsx
examples/hello-world/src/components/: LogConsole.tsx  SdkFeatureCard.tsx
examples/hello-world/src/components/workflows/: PdfToSpreadsheetConfig.tsx
examples/hello-world/src/lib/: sdk.ts  utils.ts
examples/nextjs-workflows/: package-lock.json  package.json
examples/nextjs-workflows/src/app/: layout.tsx  page.tsx
examples/nextjs-workflows/src/app/workflow/[slug]/: page.tsx
examples/nextjs-workflows/src/components/workflows/: WhatsappConfig.tsx
examples/pdf-to-form/: .gitignore  README.md  package-lock.json  package.json
examples/pdf-to-form/src/: index.ts
examples/rust-examples/popup/: Cargo.toml
examples/rust-examples/server/src/: main.rs
examples/rust-examples/wh-scrapper/: Cargo.toml
examples/rust-examples/wh-scrapper/src/: main.rs
examples/terminator-rust-examples/button/src/: main.rs
examples/terminator-rust-examples/popup/: Cargo.toml
examples/terminator-rust-examples/popup/src/: main.rs
examples/terminator-rust-examples/server/: Cargo.toml
examples/terminator-rust-examples/server/src/: main.rs
examples/terminator-rust-examples/wh-scrapper/: Cargo.toml
examples/terminator-rust-examples/wh-scrapper/src/: main.rs
examples/terminator-rust-examples/win_automation/: Cargo.toml
examples/terminator-rust-examples/win_automation/src/: main.rs
mcp/: README.md  package-lock.json  package.json  tsconfig.json
mcp/src/: index.ts  terminator.ts
python-sdk/: pyproject.toml
python-sdk/desktop_use/: __init__.py  client.py  exceptions.py  models.py
src/: element.rs  lib.rs  locator.rs  selector.rs
terminator/: Cargo.toml  firefox_window_tree.json
terminator-mcp-agent/: Cargo.toml
terminator-mcp-agent/src/: lib.rs  main.rs  server.rs  utils.rs
terminator-workflow-recorder/: Cargo.toml  README.md  comprehensive_workflow_recording.json
terminator-workflow-recorder/examples/: record_workflow.rs  simple_cpu_recorder.rs  test_ui_elements.rs
terminator-workflow-recorder/src/: error.rs  events.rs  intent.rs  lib.rs  recorder.rs  tests.rs
terminator-workflow-recorder/src/recorder/: windows.rs
terminator-workflow-recorder/tests/: integration_tests.rs
terminator/benches/: README.md  element_tree_benchmarks.rs  tree_performance_benchmarks.rs
terminator/examples/: advanced_window_targeting.rs  benchmark_example.rs  cache_warming_demo.rs  list_processes_and_windows.rs  print_accessibility_tree.rs  serialize_deserialize_element.rs  serialize_element.rs  simple_process_list.rs  smart_deserialize.rs  uielement_deserialize.rs
terminator/src/: element.rs  lib.rs  locator.rs  selector.rs  utils.rs
terminator/src/tests/: e2e_tests.rs  firefox_window_tests.rs  mod.rs
terminator/tests/: cache_warming_performance_test.rs
ts-sdk/: package-lock.json  package.json  tsconfig.json
ts-sdk/src/: index.ts
workflow-recorder/: Cargo.toml  README.md
workflow-recorder/examples/: record_workflow.rs
workflow-recorder/src/: events.rs  lib.rs  recorder.rs
workflow-recorder/src/recorder/: windows.rs
