[package]
name = "terminator"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.44.2", features = ["full"] }

[lib]
name = "terminator"
path = "src/lib.rs"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = { git = "https://github.com/eiz/accessibility.git", branch = "master" }
accessibility = { git = "https://github.com/eiz/accessibility.git", branch = "master" }
objc = "0.2.7"
objc-foundation = "0.1.1"

core-foundation = "=0.10.0"
core-graphics = { version = "0.24.0", features = ["highsierra"] }

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = { version = "0.16.1" }
