[package]
name = "workflow-recorder"
version = "0.1.0"
edition = "2021"
description = "A crate for recording user workflows on Windows"
authors = ["Terminator Contributors"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = "0.4"
ctrlc = "3.4"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.18.3"
windows = { version = "0.61.1", features = [
    "Win32_Foundation", 
    "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi"
]}

[lib]
name = "workflow_recorder"
path = "src/lib.rs"

[[example]]
name = "record_workflow"
path = "examples/record_workflow.rs" 