[package]
name = "terminator-node-bindings"
version.workspace = true
edition.workspace = true

[lib]
name = "terminator_node_bindings"
crate-type = ["cdylib"]

[dependencies]
# NAPI for Node.js bindings
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2", features = ["tokio_rt", "napi4"] }
napi-derive = { version = "2" }
terminator = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
napi-build = "2"