[package]
name = "terminator-py-bindings"
version.workspace = true
edition.workspace = true

[lib]
name = "terminator"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py311"] }
pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"] }
terminator_core = { path = "../../terminator", package = "terminator" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pyo3-stub-gen = "0.9"
serde_json = { workspace = true }
serde = { workspace = true }

[[bin]]
name = "stub_gen"
doc = false
