[package]
name = "win_automation"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.27"
eframe = { version = "0.27", features = ["default_fonts"] }
rand = "0.8"

terminator = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
